internal/corpus/testdata/cases/components/embedded_prop_binding.txtar
# A BRACED js`…`/css`…` embedded literal on a component whose name matches a
# declared prop BINDS that prop with the trusted type (gsx.RawJS / gsx.RawCSS).
# The braced form is the { expr } prop-binding form: js`…`/css`…` are Go
# expressions (Tasks 1-7), so { js`…` } assigns the RawJS value to the field.
#
# BEFORE this task: `Handler={ js`open(@{id})` }` (spaced braces) fell back to a
# plain Go-expression ExprAttr carrying the raw literal text and was emitted
# verbatim into the props composite literal — a Go syntax error
# ("missing ',' in composite literal"). The tight form `{js`…`}` parsed as an
# EmbeddedAttr but was rejected ("… with @{ } interpolation cannot be used as a
# component prop yet"). Now both braced forms bind the declared prop.
#
# Contrast embedded_attr_prop.txtar (UNBRACED literals always fall through to the
# Attrs bag) and embedded_attr_rawjs_bag.txtar (braced-but-undeclared → bag).
-- input.gsx --
package demo

import "github.com/gsxhq/gsx"

component Widget(Handler gsx.RawJS, Rule gsx.RawCSS) {
	<button @click={Handler} data-style={Rule}>Go</button>
}

component Page(id string, w string) {
	<Widget Handler={ js`open(@{id})` } Rule={ css`width:@{w}px` }/>
}
-- invoke --
Page(PageProps{Id: "abc", W: "10"})
-- diagnostics.golden --
-- render.golden --
<button @click="open(&#34;abc&#34;)" data-style="width:10px">Go</button>
-- generated.x.go.golden --
// Code generated by gsx; DO NOT EDIT.

package demo

import (
	_gsxctx "context"
	"github.com/gsxhq/gsx"
	_gsxrt "github.com/gsxhq/gsx"
	_gsxio "io"
)

type WidgetProps struct {
	Handler gsx.RawJS
	Rule    gsx.RawCSS
}

//line input.gsx:5:1
func Widget(_gsxp WidgetProps) _gsxrt.Node {
	return _gsxrt.Func(func(ctx _gsxctx.Context, _gsxw _gsxio.Writer) error {
		Handler := _gsxp.Handler
		Rule := _gsxp.Rule
		_gsxgw := _gsxrt.W(_gsxw)
//line input.gsx:6:2
		_gsxgw.S("<button @click=\"")
		_gsxgw.AttrValue(string(Handler))
		_gsxgw.S("\" data-style=\"")
		_gsxgw.AttrValue(string(Rule))
		_gsxgw.S("\">Go</button>")
		return _gsxgw.Err()
	})
}

type PageProps struct {
	Id string
	W  string
}

//line input.gsx:9:1
func Page(_gsxp PageProps) _gsxrt.Node {
	return _gsxrt.Func(func(ctx _gsxctx.Context, _gsxw _gsxio.Writer) error {
		id := _gsxp.Id
		w := _gsxp.W
		_gsxgw := _gsxrt.W(_gsxw)
//line input.gsx:10:2
		_gsxv0 := _gsxrt.EscapeJSVal(id)
		_gsxv2 := _gsxrt.RawJS("open(" + _gsxv0 + ")")
		_gsxv1 := _gsxrt.FilterCSS(string(w))
		_gsxv3 := _gsxrt.RawCSS("width:" + _gsxv1 + "px")
		_gsxgw.Node(ctx, Widget(WidgetProps{Handler: _gsxv2, Rule: _gsxv3}))
		return _gsxgw.Err()
	})
}
